--- a/index.html
+++ b/index.html
@@ -4,48 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LimpiaTexto GPT</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      max-width: 800px;
-      margin: auto;
-      padding: 2rem;
-      background-color: #f9f9f9;
-    }
-    textarea {
-      width: 100%;
-      height: 300px;
-      margin-bottom: 1rem;
-      font-family: monospace;
-    }
-    button {
-      margin: 0.25rem;
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-    }
-    #detectionResult {
-      margin-top: 1rem;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-  <h1>🧹 Limpiador de Texto GPT</h1>
-
-  <input type="file" id="fileInput" accept=".txt,.pdf" />
-  <br/><br/>
-
-  <textarea id="inputText" placeholder="Pega aquí tu texto o carga un archivo..."></textarea>
-  <br/>
-
-  <button onclick="clean()">Limpiar texto</button>
-  <button onclick="copy()">Copiar al portapapeles</button>
-  <button onclick="download()">Descargar .txt</button>
-  <button onclick="detect()">Detectar caracteres especiales</button>
-
-  <p id="detectionResult"></p>
-
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
+</head>
+<body class="bg-gray-100 text-gray-800">
+  <div class="max-w-3xl mx-auto p-6">
+    <h1 class="text-3xl font-bold mb-4 text-center">🧹 Limpiador de Texto GPT</h1>
+
+    <input type="file" id="fileInput" accept=".txt,.pdf"
+      class="block w-full mb-4 p-2 border border-gray-300 rounded"/>
+
+    <textarea id="inputText" placeholder="Pega aquí tu texto o carga un archivo..."
+      class="w-full h-64 p-4 border border-gray-300 rounded font-mono resize-none mb-4"></textarea>
+
+    <div class="flex flex-wrap gap-2 mb-4">
+      <button onclick="clean()" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Limpiar</button>
+      <button onclick="copy()" class="bg-yellow-500 text-white px-4 py-2 rounded hover:bg-yellow-600">Copiar</button>
+      <button onclick="download()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Descargar</button>
+      <button onclick="detect()" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700">Detectar</button>
+    </div>
+
+    <div id="detectionResult" class="text-sm font-semibold"></div>
+  </div>
+
   <script>
     const inputText = document.getElementById('inputText');
 
@@ -121,10 +102,10 @@
 
       const resultEl = document.getElementById("detectionResult");
       if (findings.length > 0) {
-        resultEl.style.color = "red";
-        resultEl.innerHTML = "⚠️ Se detectaron caracteres especiales:<br>" + findings.join("<br>");
+        resultEl.className = "text-red-600";
+        resultEl.innerHTML = "⚠️ Caracteres especiales detectados:<br>" + findings.join("<br>");
       } else {
-        resultEl.style.color = "green";
+        resultEl.className = "text-green-600";
         resultEl.textContent = "✅ No se detectaron caracteres especiales";
       }
     }
